Fixing all remaing problems